# maui-software-ui

./: .gitignore  LICENSE  README.md  app.py  build.py  pyproject.toml
acoustic_indices/: __init__.py  acoustic_indices_calculation.py
pages/: acoustic_indices.py  audio_segmentation.py  eda.py  load_data.py  spectrograms.py  summary_visualizations.py  welcome.py
utils/: __init__.py  __init__.py.backup  definitions.py  io_utils.py  random_utils.py
